Fixed 300ms delay on mobile

--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ html, body {
 
 html {
     -webkit-tap-highlight-color: rgba(0,0,0,0);
+    touch-action: manipulation;
 }
 
 body {
